# zhiz-small-goal

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CONTRIBUTING.md  LICENSE  README.md  STAGE_PLAN.md  THIRD_PARTY_NOTICES.md  hello.cpp  hello.i  hello.s  index.md  open_log.bat  reference_learn.md  test_c++_standard.cpp  枝枝学习日志 -v1.0.py  枝枝学习日志.py  枝枝学习日志.spec  理解hello.cpp代码含义.md  编译过程详解.md  饭饭的爱心代码.py
01detailed compilation and study/: 编译过程详解.md
02learning dll/: hello.cpp  noextern.cpp
03DB vs RL/: assert.cpp  assert_debug.i
04Understanding CMake Configuration/: CMakeLists详解.md
2025.11.28/: this指针.md  哈哈.cpp  哈哈.md  哦豁.cpp  哦豁.md  自增前后区别.md
2025.12.01/: main.cpp  对象和变量.cpp  注释.cpp
2025.12.02/: 对象和函数定义.md  对象定义.md
DB vs RL/: assert-review.cpp
Understanding CMake Configuration/: CMake配置说明.md  理解CMake基本构建配置.md
app/: main.cpp
archive/: CMakeLists.txt  hello.cpp  test_c++_standard.cpp
archive/05conts learning/: AI所写_const与constexpr详解.md
archive/2025.11.28/: this指针.cpp  自增前后区别.cpp
archive/2025.12.01/: CmakeLists.txt  stats.cpp  stats.h  对象和变量.md  注释.md
archive/2025.12.02/: 对象和函数定义.cpp  对象定义.cpp
archive/reviews/: 2025.12.05_对象和变量_review.md
archive/script/: zhiz-learning-log.py  zhiz-learning-log.spec  枝枝学习日志.py
cards/: 嗯嗯.md  声明和定义.cpp  声明和定义.md
conts learning/: const_learning_summary.md  contslearn.cpp
core/zhiz_log/: logger.cpp  logger.h
detailed compilation and study/: hello.cpp
docs/: 2025.12.17.md  2025.12.19_problem.md  2025.12.23_pb.md  README.md  day05_day14_execution_plan.md  plan_day01_day10.md  stage0_dod.md
learning dll/: main.cpp
referencess to be stubied/: C++引用详解.md
script/: 枝枝学习日志-v1.0.py  枝枝学习日志-v1.0.spec
